fix some whitespace

--- a/style/style.css
+++ b/style/style.css
@@ -118,7 +118,7 @@ button {
   transition: 0.3s;
 }
 
-.sidebar p4 {
+.version {
   font-family: sans-serif;
   text-decoration: none;
   font-size: 1.5vmin;
